Tue Jun  8 12:29:19 2004  Steve Huston  <shuston@riverace.com>

	* modules/AutomakeWorkspaceCreator.pm (write_comps): Get automake
	  trees to generate. It now relies on this scheme:
	  * Each project goes in its own Makefile.<project>.am file (this is
	    not a change from previous versions).
	  * Each Makefile.am has a list of local project Makefiles added to
	    it and has all-local, clean-local, and distclean-local targets
	    added that cycle through all the local projects and do sub-makes.
	  * At autoconf/automake (bootstrap) time, all of the
	    Makefile[.<proj>].am files get processed into Makefile[.<proj>].in
	    files. This list is directed by the configure.ac.Makefiles list
	    that should be included into configure.ac.
	  * At configure time, all of the .in files get processed into
	    Makefiles. All the local targets that MPC put in the Makefile.am
	    files should go through to the Makefiles at each level, and
	    direct the build.

	Made these changes:
	  - Only generate a configure.ac.Makefiles at the starting directory
	    level; not at each level. When adding entries, don't keep the
	    ".am" suffix; this was a mistake.
	  - The configure.ac.Makefile also needs an entry for the Makefile at
	    each directory level with a project.
	  - The top-level Makefile.am has the "ACLOCAL = @ACLOCAL@" and
	    "AC_LOCAL_AMFLAGS = -I m4" lines added to the end to pass the
	    flags along properly when running autoconf.

Tue Jun  8 11:30:15 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7.mpd:

          Added the ability to add additional compiler options through the
          use of the compile_flags template value.

Fri May 28 14:03:13 2004  Chad Elliott  <elliott_c@ociweb.com>

        * LICENSE:

          Added a license file with the content from the MPC section of
          http://theaceorb.com/product/license.html.

        * config/openssl.mpb:
        * templates/automake.mpd:
        * templates/bmake.mpd: